<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">春生的点餐平台</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_textview">用户名:</string>
    <string name="password_textview">密码:</string>
    <string name="username_edittext">用户名</string>
    <string name="password_edittext">密码</string>
    <string name="phone_edittext">电话号码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="goto_register">没有账号?去注册</string>
    <string name="goto_login">已有账号?去登录</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="question1">密保问题1:</string>
    <string name="question2">密保问题2:</string>
    <string name="question3">密保问题3:</string>
    <string name="answer">答案:</string>
    <string name="home">首页</string>
    <string name="cart">已点</string>
    <string name="order">订单</string>
    <string name="user">我</string>
    <string name="search_view">搜索菜品名称</string>
    <string name="meat">荤菜</string>
    <string name="vege">素菜</string>
    <string name="cold">凉菜</string>
    <string name="soup">汤</string>
    <string name="hot">特色菜</string>
    <string name="cart_title">———已点菜品———</string>
    <string name="clear">清空</string>
    <string name="select_desk">点好了? 去选桌</string>
    <string name="desk_txt_normal">可选</string>
    <string name="desk_txt_lock">不可选</string>
    <string name="desk_txt_checked">已选</string>
    <string name="desk_people">用餐人数：</string>
    <string name="reserve_date">用餐时间</string>
    <string name="commit_order">提交订单</string>
    <string name="confirm">确认</string>
    <string name="myorder">我的订单</string>
    <string name="user_order">历史订单</string>
    <string name="alter_password">修改密码</string>
    <string name="quit">注销登录</string>
    <string name="oldpw">旧密码</string>
    <string name="newpw1">新密码</string>
    <string name="newpw2">再次输入新密码</string>
    <string name="alter">修改</string>
    <string name="cancel">取消</string>

    <string-array name="question_password1">
        <item>你的名字</item>
        <item>你小学班主任的名字</item>
        <item>你初中班主任的名字</item>
        <item>你高中班主任的名字</item>
    </string-array>
    <string-array name="question_password2">
        <item>你的学号(工号)</item>
        <item>你的出生地</item>
        <item>你配偶的姓名</item>
        <item>你配偶的职业</item>
    </string-array>
    <string-array name="question_password3">
        <item>你父亲的姓名</item>
        <item>你父亲的职业</item>
        <item>你母亲的姓名</item>
        <item>你母亲的职业</item>
    </string-array>

    <string name="title_activity_date">DateActivity</string>
    <string name="title_activity_menu_item">MenuItemActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>