<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.orderplatform.LoginActivity" >

    <ImageView
        android:id="@+id/login_imageview_account"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="93.5dp"
        android:background="@drawable/ic_face_48px" />

    <EditText
        android:id="@+id/login_edittext_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/username_edittext"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/login_edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password_edittext"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/login_edittext_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/phone_edittext"
        android:inputType="phone"
        android:textSize="16sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/login_textview_question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question1"
            android:textColor="#007cb9"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/login_spinner_question1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/question_password1"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/login_textview_answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/answer"
            android:textColor="#007cb9"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/login_edittext_answer1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_question2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/login_textview_question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question2"
            android:textColor="#007cb9"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/login_spinner_question2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/question_password2"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_answer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/login_textview_answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/answer"
            android:textColor="#007cb9"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/login_edittext_answer2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_question3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/login_textview_question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question3"
            android:textColor="#007cb9"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/login_spinner_question3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/question_password3"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_answer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/login_textview_answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/answer"
            android:textColor="#007cb9"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/login_edittext_answer3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_remember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/login_checkbox_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/login_textview_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:text="@string/remember_password"
            android:textColor="#005691" />

        <TextView
            android:id="@+id/login_textview_forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/forget_password"
            android:textColor="#ff0000" />
    </LinearLayout>

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/buton_style"
        android:gravity="center"
        android:text="@string/login" />

    <Button
        android:id="@+id/login_button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/buton_style"
        android:gravity="center"
        android:text="@string/register"
        android:visibility="gone" />

    <TextView
        android:id="@+id/login_textview_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:text="@string/goto_register"
        android:textColor="#005691" />

    <TextView
        android:id="@+id/login_textview_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:text="@string/goto_login"
        android:textColor="#005691"
        android:visibility="gone" />

</LinearLayout>