<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <SearchView
        android:id="@+id/home_searchview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:iconifiedByDefault="false"
        android:inputType="textFilter"
        android:queryHint="@string/search_view" >
    </SearchView>

    <RadioGroup
        android:id="@+id/home_buttongroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/home_button_hot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/ic_hot"
            android:gravity="center"
            android:paddingTop="2dp"
            android:text="@string/hot"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/home_button_meat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/ic_meat"
            android:gravity="center"
            android:paddingTop="2dp"
            android:text="@string/meat"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/home_button_vege"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/ic_vege"
            android:gravity="center"
            android:paddingTop="2dp"
            android:text="@string/vege"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/home_button_soup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/ic_soap"
            android:gravity="center"
            android:paddingTop="2dp"
            android:text="@string/soup"
            android:textSize="12sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/home_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/hot"
        android:textColor="#ff0000"
        android:textSize="16sp" />

    <ListView
        android:id="@+id/home_hot_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp" />
    
</LinearLayout>